# GraphRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  moreingesting.txt  pyproject.toml
.vectorstore/: chroma.sqlite3  embeddings.npz  index.faiss  metadata.json
configs/: default.yaml
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  EVALUATION.md  GRAPH_RAG_TUTOR_BLUEPRINT.md  GRAPH_RAG_TUTOR_PROMPTS.md  todo.md
docs/adr/: 001-architecture-decisions.md
scripts/: eval.py  export_model.py  ingest.py  pdf_extract.py  query.py
src/: __init__.py  config.py  exceptions.py  logging_config.py  types.py
src/app/: __init__.py  auth.py  exceptions.py  main.py  middleware.py  schemas.py
src/app/routes/: __init__.py  (+3 more)
src/connectors/: __init__.py  base.py  document.py  factory.py  json_pages.py  local.py  s3.py  web.py
src/embeddings/: __init__.py  base.py  bedrock.py  cache.py  cached.py  factory.py  local.py  openai_emb.py
src/eval/: __init__.py  dataset.py  report.py  runner.py
src/graphs/: __init__.py  grounding.py  prompts.py  qna_graph.py  state.py
src/ingestion/: __init__.py  chunking.py  cleaning.py  metadata.py  pipeline.py
src/llm/: __init__.py  base.py  bedrock.py  factory.py  ollama.py  openai_llm.py
src/retrieval/: __init__.py  citations.py  reranker.py  service.py
src/store/: __init__.py  base.py  chroma_store.py  factory.py  faiss_store.py
test_chroma/: chroma.sqlite3
tests/: __init__.py  conftest.py  test_config.py  test_docker.py  test_logging.py  test_project_structure.py  test_scripts.py  test_types.py
tests/app/: __init__.py  test_errors.py  test_health.py  test_ingest.py  test_main.py  test_query.py
tests/connectors/: __init__.py  test_base.py  test_document.py  test_factory.py  test_local.py
tests/e2e/: __init__.py  conftest.py  test_api.py  test_eval.py  test_full_pipeline.py
tests/embeddings/: test_base.py  test_bedrock.py  test_cache.py  test_factory.py  test_local.py  test_openai.py
tests/eval/: test_dataset.py  test_runner.py
tests/graphs/: __init__.py  test_qna_graph.py  test_state.py
tests/ingestion/: __init__.py  test_chunking.py  test_cleaning.py  test_metadata.py  test_pipeline.py
tests/llm/: test_base.py  test_bedrock.py  test_factory.py  test_ollama.py  test_openai.py
tests/retrieval/: __init__.py  test_citations.py  test_integration.py  test_reranker.py  test_service.py
tests/store/: test_base.py  test_chroma.py  test_factory.py  test_faiss.py
(+24 files in other folders)
