[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-graphrag-tutor"
version = "0.1.0"
description = "A content-agnostic RAG service with LangGraph orchestration that answers questions only when supported by sources"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GraphRAG Team"}
]
keywords = ["rag", "langgraph", "llm", "question-answering", "citations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "boto3>=1.34.0",
    "openai>=1.10.0",
    "tiktoken>=0.6.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
graphrag-ingest = "scripts.ingest:main"
graphrag-eval = "scripts.eval:main"

[project.urls]
Homepage = "https://github.com/example/grounded-graphrag-tutor"
Documentation = "https://github.com/example/grounded-graphrag-tutor#readme"
Repository = "https://github.com/example/grounded-graphrag-tutor"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests (deselect with '-m \"not e2e\"', enable with --run-e2e)",
    "slow: tests that take more than a few seconds to run",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
